# changepoint

./: .gitignore  .gitlab-ci.yml  .readthedocs.yaml  Analysis.ipynb  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: python-build-test.yaml  rust-build-test.yaml
benches/: bocpd.rs  bocpd_truncated.rs  online_bayesian.rs  vec_vs_deque.rs
changepoint/: CHANGELOG.md  Cargo.toml
changepoint-py/: Cargo.toml  README.md  pyproject.toml  test.py
changepoint-py/src/: argpcpd.rs  bocpd.rs  lib.rs
changepoint/benches/: argpcpd.rs  bocpd.rs  bocpd_truncated.rs
changepoint/examples/: ChangePointToy.ipynb  ChangePointToy_ARGP.ipynb  toy_model.rs  toy_model_argp.rs  treasury_bill.ipynb  treasury_bill.rs
changepoint/src/: bocpd.rs  bocpd_truncated.rs  generators.rs  hazard.rs  lib.rs  traits.rs  utils.rs
changepoint/src/gp/: mod.rs
development_docs/: ChangePointPredictor.md
examples/: ChangePointToy.ipynb  TB3MS.csv  treasury_bill.ipynb  treasury_bill.rs
pychangepoint/: .gitignore  CHANGELOG.md  Cargo.toml  ChangePointExample.ipynb  README.md  noxfile.py  pyproject.toml  requirements-docs.txt  test.py
pychangepoint/docs/source/: APIreference.rst  UserGuide.rst  conf.py  index.rst
pychangepoint/src/: argpcpd.rs  bocpd.rs  convert.rs  lib.rs
pychangepoint/tests/: test_bocpd.py  test_example.py  test_infer.py  test_int_to_bool_conversion.py  test_int_to_bool_convertsion.py  test_pickle.py
resources/: SPCS20RSA.csv  TB3MS.csv
src/: bocpd.rs  bocpd_truncated.rs  generators.rs  lib.rs  online_bayesian.rs  run_length_detector.rs  utils.rs
src/gp/: mod.rs
