[package]
name = "changepoint"
version = "0.8.1"
authors = [
    "Mike Schmidt <schmidmt@gmail.com>",
    "Baxter Eaves <baxyjr@gmail.com>",
]
edition = "2018"
repository = "https://gitlab.com/Redpoll/changepoint"
keywords = ["CPD", "Bayesian", "Machine-Learning", "Statistics"]
categories = ["science"]
license = "MIT"
readme = "README.md"
description = "Change Point Detection in Rust"

[badges]
gitlab = { repository = "https://gitlab.com/Redpoll/changepoint/" }
maintenance = { status = "actively-developed" }

[features]
serde1 = ["serde", "rv/serde1"]

[dependencies]
rand = "0.7.3"
rv = "0.10.1"
serde = {version = "1", optional = true, features=["derive"]}
doc-comment = "0.3.3"

[dev-dependencies]
assert = "0.7"
criterion = "0.3"

# Benchmarks
[[bench]]
name = "bocpd"
harness = false

[[bench]]
name = "bocpd_truncated"
harness = false

[[bench]]
name = "vec_vs_deque"
harness = false
