[package]
name = "changepoint"
version = "0.11.1"
authors = [
    "Mike Schmidt <schmidmt@gmail.com>",
    "Baxter Eaves <baxyjr@gmail.com>",
]
edition = "2018"
repository = "https://gitlab.com/Redpoll/changepoint"
keywords = ["CPD", "Bayesian", "Machine-Learning", "Statistics"]
categories = ["science"]
license = "MIT"
readme = "README.md"
description = "Change Point Detection in Rust"

[badges]
gitlab = { repository = "https://gitlab.com/Redpoll/changepoint/" }
maintenance = { status = "actively-developed" }

[features]
serde1 = ["serde", "rv/serde1", "nalgebra/serde-serialize"]

[dependencies]
rand = { version = "0.7", features = ["small_rng"] }
rv = { version = "0.11", features = ["process"] }
serde = {version = "1", optional = true, features=["derive"]}
serde_derive = {version = "1", optional = true}
doc-comment = "0.3"
ndarray = { version = "0.14", features = ["serde", "approx", "rayon"] }
derive_more = "0.99"
rayon = "1.4"
num-traits = "0.2"
approx = "0.3"
nalgebra = "0.22"
special = "0.8"

[dev-dependencies]
assert = "0.7"
criterion = "0.3"
serde_json = "1"

# Benchmarks
[[bench]]
name = "bocpd"
harness = false

[[bench]]
name = "bocpd_truncated"
harness = false
