[package]
name = "changepoint-py"
description = "A Python module for changepoint"
version = "0.1.0"
repository = "https://gitlab.com/Redpoll/changepoint"
keywords = ["rng", "wyrand", "pcg", "chacha", "random", "pcg64"]
authors = ["Redpoll <info@redpoll.ai>"]
edition = "2018"
license = "MIT"
publish = false

[lib]
name = "pychangepoint"
crate-type = ["cdylib"]

[dependencies]
rand = { version = "0.8", features = ["small_rng"] }
rv = { version = "0.12", features = ["process"] }
changepoint = { path = "../changepoint" }

[dependencies.pyo3]
version = "0.14.1"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[package.metadata.maturin]
classifier = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Rust",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
]
