[package]
name = "changepoint-py"
description = "A Python module for changepoint"
version = "0.2.0"
repository = "https://gitlab.com/Redpoll/changepoint"
authors = ["Redpoll <info@redpoll.ai>"]
edition = "2018"
license = "MIT"
publish = false

[lib]
name = "pychangepoint"
crate-type = ["cdylib"]

[dependencies]
rand = { version = "0.8", features = ["small_rng"] }
# rv = { version = "0.14", features = ["process", "arraydist"] }
rv = { path="/Users/bax/Documents/redpoll/rv", features = ["process", "arraydist"] }
changepoint = { path = "../changepoint" }
numpy = "0.17"

[dependencies.pyo3]
version = "0.17.3"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[package.metadata.maturin]
classifier = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Rust",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
]
