[package]
name = "changepoint"
version = "0.14.1"
authors = [
    "Mike Schmidt <schmidmt@gmail.com>",
    "Baxter Eaves <baxyjr@gmail.com>",
]
edition = "2021"
repository = "https://github.com/promised-ai/changepoint"
keywords = ["CPD", "Bayesian", "Machine-Learning", "Statistics"]
categories = ["science"]
license = "MIT"
readme = "../README.md"
description = "Change Point Detection in Rust"

[lib]
bench = false

[badges]
github = { repository = "https://github.com/promised-ai/changepoint/" }
maintenance = { status = "actively-developed" }

[features]
serde1 = ["serde", "rv/serde1"]

[dependencies]
rand = { version = "0.8", features = ["small_rng"] }
rv = { version = "0.16", features = ["process", "arraydist"] }
nalgebra = { version = "0.32" }
serde = {version = "1", optional = true, features=["derive"]}
serde_derive = {version = "1", optional = true}
ndarray = { version = "0.15", features = ["serde", "approx", "rayon"] }
derive_more = "0.99"
rayon = "1.4"
num-traits = "0.2"
approx = "0.5"
special = "0.10"

[dev-dependencies]
assert = "0.7"
criterion = "0.5"
serde_json = "1"

# Benchmarks
[[bench]]
name = "bocpd"
harness = false

[[bench]]
name = "bocpd_truncated"
harness = false

[[bench]]
name = "argpcpd"
harness = false

[profile.profiling]
inherits = "release"
debug = 2
