[package]
name = "pychangepoint"
description = "A Python module for changepoint"
version = "0.3.0"
repository = "https://github.com/promised-ai/changepoint"
authors = ["Redpoll <info@redpoll.ai>"]
edition = "2021"
license = "MIT"
publish = false

[workspace]
# prevents package from thinking it's in the workspace

[lib]
name = "changepoint"
crate-type = ["cdylib"]

[dependencies]
changepoint = { path = "../changepoint" }
nalgebra = { version = "0.27" }
numpy = "0.18"
pyo3 = "0.18"
rand = { version = "0.8", features = ["small_rng"] }
rv = { version = "0.14", features = ["process", "arraydist"] }

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[package.metadata.maturin]
name = "changepoint"
