[package]
name = "pychangepoint"
description = "A Python module for changepoint"
version = "0.3.2"
repository = "https://github.com/promised-ai/changepoint"
authors = ["Redpoll <info@redpoll.ai>"]
edition = "2021"
license = "MIT"
publish = false

[workspace]
# prevents package from thinking it's in the workspace

[lib]
name = "changepoint"
crate-type = ["cdylib"]

[dependencies]
bincode = "1.3.3"
changepoint = { path = "../changepoint", features = ["serde1"] }
nalgebra = { version = "0.32" }
numpy = "0.20"
pyo3 = { version ="0.20", features = ["extension-module"] }
rand = { version = "0.8", features = ["small_rng"] }
rv = { version = "0.16", features = ["process", "arraydist"] }
serde = "1.0.175"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]
