[build-system]
requires = [
    "maturin >= 0.14, < 0.15",
]
build-backend = "maturin" 

[project]
name = "changepoint"
version = "0.3.1"
authors = [
    {name = "Redpoll", email = "info@redpoll.ai" },
]
description= "A Bayesian change point library"
readme = "README.md"
requires-python = ">=3.7, < 4"
keywords = ["changepoint"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = []
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/promised-ai/changepoint"

[tool.maturin]
bindings = "pyo3"

[tool.black]
line-length = 80
